--- a/main.html
+++ b/main.html
@@ -8,7 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
+	<h2>Job app form</h2>
+	<form>
+		<label for="name">Name*:</label><br>
+		<input type="text" placeholder="Enter your name"><br>
+		
+		<label for="email">Email*: </label>
+		<input type="email" placeholder="Enter your Email"><br>
+
+		 <label for="gender">Gender:</label>
+		 <input type="radio" name="gender" value="male">
+		 <label for="male">Male</label>
+		 <input type="radio" name="gender" value="female">
+		 <label for="female">Female</label>
+<br>
+		 <label for="laptop">Laptop</label>
+		 <input type="checkbox" name=" laptop" value="apple">
+        <lable for="apple">apple</lable>
+		<input type="checkbox" name=" laptop" value="Hp">
+        <lable for="Hp">Hp</lable>
+		<input type="checkbox" name=" laptop" value="asus">
+        <lable for="asus">asus</lable>
+		<br>
+		<label for="age">Age*:</label>
+		<input type="number" place holder="enter age">
+		<br>
+		<label for="DOB">Date of Birth*:</label>
+		<input type="number">
+		<br>
+		<label for="password">Password*:</label>
+		<input type="text">
+		<br>
+		<input type="Submit" value="Submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
