--- a/main.html
+++ b/main.html
@@ -8,38 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>Job app form</h2>
-	<form>
-		<label for="name">Name*:</label><br>
-		<input type="text" placeholder="Enter your name"><br>
+	<form method="post">
+		<label for="name" id="name">Name:</label><br>
+		<input type="text" placeholder="Enter your name" required id="name"><br>
 		
-		<label for="email">Email*: </label>
-		<input type="email" placeholder="Enter your Email"><br>
+		<label for="email" id="email">Email: </label>
+		<input type="email" placeholder="Enter your Email" name="email" id="email" required><br>
 
-		 <label for="gender">Gender:</label>
-		 <input type="radio" name="gender" value="male">
-		 <label for="male">Male</label>
-		 <input type="radio" name="gender" value="female">
-		 <label for="female">Female</label>
+		 <label for="gender" id="gender">Gender:</label>
+		 <input type="radio" name="gender" value="male" id="male" required>
+		 <label for="male" id="male">Male</label>
+		 <input type="radio" name="gender" value="female" id="female" required>
+		 <label for="female" id="female">Female</label>
 <br>
-		 <label for="laptop">Laptop</label>
-		 <input type="checkbox" name=" laptop" value="apple">
+		 <label for="laptop" id="laptop">Laptop</label>
+		 <select name="laptop" id="laptop">
+			<option value="apple">apple</option>
+			<option value="asus">asus</option>
+			<option value="hp">hp</option>
+		 </select>
+
+		
+		<!--<input type="checkbox" name=" laptop" value="apple">
         <lable for="apple">apple</lable>
 		<input type="checkbox" name=" laptop" value="Hp">
         <lable for="Hp">Hp</lable>
 		<input type="checkbox" name=" laptop" value="asus">
-        <lable for="asus">asus</lable>
+        <lable for="asus">asus</lable>-->
 		<br>
-		<label for="age">Age*:</label>
-		<input type="number" place holder="enter age">
+		<label for="age" id="age">Age:</label>
+		<input type="number" place holder="enter age" name="age" id="age" required>
 		<br>
-		<label for="DOB">Date of Birth*:</label>
-		<input type="number">
+		<label for="DOB" id="DOB">Date of Birth*:</label>
+		<input type="date" name="DOB" id="DOB" required>
 		<br>
-		<label for="password">Password*:</label>
-		<input type="text">
+		<label for="password" id="password">Password*:</label>
+		<input type="password" name="password" id="password" required>
 		<br>
-		<input type="Submit" value="Submit">
+		<label for="portfolio">Enter your portfolio link</label>
+		<input type="url" name="link" id="portfolio">
+		<button type="Submit" id="button">Submit</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
