--- a/main.html
+++ b/main.html
@@ -39,8 +39,8 @@
 		<label for="age" id="age">Age:</label>
 		<input type="number" place holder="enter age" name="age" id="age" required>
 		<br>
-		<label for="DOB" id="DOB">Date of Birth*:</label>
-		<input type="date" name="DOB" id="DOB" required>
+		<label for="dob" id="dob">Date of Birth*:</label>
+		<input type="date" name="dob" id="dob" required>
 		<br>
 		<label for="password" id="password">Password*:</label>
 		<input type="password" name="password" id="password" required>
